tests/agl/rejections/type/ambiguous_slot_reference_outside_pattern.agl
enum Color
  | Red
  | Blue

enum Signal
  | Red
  | Green

enum Wrap
  | wrap(shade: Color)

let w = wrap(Color::Blue)
case w of
  | wrap(Red) =>
    print "${Red()}"
  | wrap(Blue) =>
    print "blue"
